--- a/lesson29_cpp/lesson.uvprojx
+++ b/lesson29_cpp/lesson.uvprojx
@@ -10,8 +10,8 @@
       <TargetName>Debug</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>6210000::V6.21::ARMCLANG</pCCUsed>
-      <uAC6>1</uAC6>
+      <pCCUsed>5060960::V5.06 update 7 (build 960)::.\ARM_Compiler_5.06u7</pCCUsed>
+      <uAC6>0</uAC6>
       <TargetOption>
         <TargetCommonOption>
           <Device>STM32F103C8</Device>
@@ -134,11 +134,11 @@
             <RunIndependent>0</RunIndependent>
             <UpdateFlashBeforeDebugging>1</UpdateFlashBeforeDebugging>
             <Capability>1</Capability>
-            <DriverSelection>4096</DriverSelection>
+            <DriverSelection>-1</DriverSelection>
           </Flash1>
           <bUseTDR>1</bUseTDR>
           <Flash2>BIN\UL2CM3.DLL</Flash2>
-          <Flash3>"" ()</Flash3>
+          <Flash3></Flash3>
           <Flash4></Flash4>
           <pFcarmOut></pFcarmOut>
           <pFcarmGrp></pFcarmGrp>
@@ -329,7 +329,7 @@
             <uC99>1</uC99>
             <uGnu>1</uGnu>
             <useXO>0</useXO>
-            <v6Lang>5</v6Lang>
+            <v6Lang>3</v6Lang>
             <v6LangP>3</v6LangP>
             <vShortEn>1</vShortEn>
             <vShortWch>1</vShortWch>
@@ -340,7 +340,7 @@
               <MiscControls></MiscControls>
               <Define></Define>
               <Undefine></Undefine>
-              <IncludePath>..\qpc\include;..\qpc\ports\arm-cm\qxk\armclang</IncludePath>
+              <IncludePath></IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -371,7 +371,7 @@
             <TextAddressRange>0x08000000</TextAddressRange>
             <DataAddressRange>0x20000000</DataAddressRange>
             <pXoBase></pXoBase>
-            <ScatterFile>.\Objects\lesson.sct</ScatterFile>
+            <ScatterFile></ScatterFile>
             <IncludeLibs></IncludeLibs>
             <IncludeLibsPath></IncludeLibsPath>
             <Misc></Misc>
@@ -385,16 +385,6 @@
           <GroupName>src</GroupName>
           <Files>
             <File>
-              <FileName>bsp.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\bsp.h</FilePath>
-            </File>
-            <File>
-              <FileName>shape.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\shape.h</FilePath>
-            </File>
-            <File>
               <FileName>main.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\main.cpp</FilePath>
@@ -405,99 +395,14 @@
               <FilePath>.\shape.cpp</FilePath>
             </File>
             <File>
-              <FileName>bsp.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\bsp.cpp</FilePath>
-            </File>
-          </Files>
-        </Group>
-        <Group>
-          <GroupName>qpc</GroupName>
-          <Files>
-            <File>
-              <FileName>qxk.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\qpc\src\qxk\qxk.c</FilePath>
+              <FileName>shape.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\shape.h</FilePath>
             </File>
             <File>
-              <FileName>qxk_mutex.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\qpc\src\qxk\qxk_mutex.c</FilePath>
-            </File>
-            <File>
-              <FileName>qxk_sema.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\qpc\src\qxk\qxk_sema.c</FilePath>
-            </File>
-            <File>
-              <FileName>qxk_xthr.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\qpc\src\qxk\qxk_xthr.c</FilePath>
-            </File>
-            <File>
-              <FileName>qep_hsm.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\qpc\src\qf\qep_hsm.c</FilePath>
-            </File>
-            <File>
-              <FileName>qep_msm.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\qpc\src\qf\qep_msm.c</FilePath>
-            </File>
-            <File>
-              <FileName>qf_act.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\qpc\src\qf\qf_act.c</FilePath>
-            </File>
-            <File>
-              <FileName>qf_actq.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\qpc\src\qf\qf_actq.c</FilePath>
-            </File>
-            <File>
-              <FileName>qf_defer.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\qpc\src\qf\qf_defer.c</FilePath>
-            </File>
-            <File>
-              <FileName>qf_dyn.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\qpc\src\qf\qf_dyn.c</FilePath>
-            </File>
-            <File>
-              <FileName>qf_mem.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\qpc\src\qf\qf_mem.c</FilePath>
-            </File>
-            <File>
-              <FileName>qf_ps.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\qpc\src\qf\qf_ps.c</FilePath>
-            </File>
-            <File>
-              <FileName>qf_qact.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\qpc\src\qf\qf_qact.c</FilePath>
-            </File>
-            <File>
-              <FileName>qf_qeq.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\qpc\src\qf\qf_qeq.c</FilePath>
-            </File>
-            <File>
-              <FileName>qf_qmact.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\qpc\src\qf\qf_qmact.c</FilePath>
-            </File>
-            <File>
-              <FileName>qf_time.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\qpc\src\qf\qf_time.c</FilePath>
-            </File>
-            <File>
-              <FileName>qxk_port.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\qpc\ports\arm-cm\qxk\armclang\qxk_port.c</FilePath>
+              <FileName>qassert.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\qassert.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -512,10 +417,25 @@
   </Targets>
 
   <RTE>
+    <packages>
+      <filter>
+        <targetInfos/>
+      </filter>
+      <package name="CMSIS" vendor="ARM" version="5.9.0">
+        <targetInfos>
+          <targetInfo name="Debug" versionMatchMode="fixed"/>
+        </targetInfos>
+      </package>
+      <package name="STM32F1xx_DFP" vendor="Keil" version="2.4.1">
+        <targetInfos>
+          <targetInfo name="Debug" versionMatchMode="fixed"/>
+        </targetInfos>
+      </package>
+    </packages>
     <apis/>
     <components>
-      <component Cclass="CMSIS" Cgroup="CORE" Cvendor="ARM" Cversion="6.0.0" condition="ARMv6_7_8-M Device">
-        <package name="CMSIS" schemaVersion="1.7.7" url="https://www.keil.com/pack/" vendor="ARM" version="6.0.0"/>
+      <component Cclass="CMSIS" Cgroup="CORE" Cvendor="ARM" Cversion="5.6.0" condition="ARMv6_7_8-M Device">
+        <package name="CMSIS" schemaVersion="1.7.7" url="http://www.keil.com/pack/" vendor="ARM" version="5.9.0"/>
         <targetInfos>
           <targetInfo name="Debug"/>
         </targetInfos>
@@ -554,14 +474,5 @@
       </file>
     </files>
   </RTE>
-
-  <LayerInfo>
-    <Layers>
-      <Layer>
-        <LayName>lesson</LayName>
-        <LayPrjMark>1</LayPrjMark>
-      </Layer>
-    </Layers>
-  </LayerInfo>
 
 </Project>
